--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 html {
     height: 100%;
-    margin:0px;
+    margin: 0px;
 }
 
 body {
@@ -12,7 +12,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    height:100%;
+    height: 100%;
 }
 
 /** Navigation bar, full width **/
@@ -101,7 +101,6 @@ li a:hover {
     padding-bottom: 20px;
     height: fit-content;
     background: white;
- 
 }
 
 h1 {
@@ -226,7 +225,6 @@ form {
     height: 230px;
 }
 
-
 .text:hover {
     background: lightskyblue;
     cursor: progress;
@@ -242,7 +240,6 @@ footer {
     border-top: #4aaaa5 solid 11px;
     padding-top: 20px;
     font-size: 15px;
-    text-align: center !important;
 }
 
 .wrapper {
@@ -257,71 +254,96 @@ footer {
 }
 
 /** RESPONSIVE **/
+
 /** 980px **/
 
- @media screen and (max-width: 980px){
-     .content  {width: 63%; float: left;
-        margin-left: 10px; margin-bottom:auto; }
-
-        .wrapper {min-height: 60%;}
-
-        .push {height:78%}
-     }
-/** 768px **/
-     @media screen and (max-width: 768px){   
-        .content {width: 87.57%; float: none; margin:35px 20.5px;}
-        .container {width: 95%;}
-    
-        .push {height: 110%;}
-     }
-/** 640px **/
-     @media screen and (max-width: 640px){  
-
-        .container {height: fit-content; width: 100%;}
-        
-        header {float:none;
-            width: 100%;
-        clear: both;}
-        
-        nav{margin-top: 95px;
-            float: left;
-            width: fit-content;
-            background: white;
-            padding: 10px;
-            margin-left: 165px;
-            } 
-    
-        .main-header {height:fit-content; background: white;
-        width: 100%;}
-
-        .content {margin-left: 15.5px;}
-        
-
-
-        /** About **/
-#mypic {float: none;
-width: 100%; height:100%;}
-
-
-        /**portfolio **/
-        .rows {width: 100%;}
-
-        .imagecontainer {width: 100%;
-        height: fit-content;}
-
-        .pict {height:99%;
-        width:99%;}
-
-        .text {width: 98.25%;}
-
-
-        /**footer**/
-
-        .push {height: 170%;}
+@media screen and (max-width: 980px) {
+    .container {width:98%; }
+   
+    .content {
+        width: 63%;
+        float: left;
+        margin-left: 10px;
+        margin-bottom: auto;
     }
-        
-     }
+    .wrapper {
+        min-height: 60%;
+    }
+    .push {
+        height: 83%
+    }
+    footer {
+        width: 100%;
+    }
+}
 
+/** 768px **/
 
-     
-  
+@media screen and (max-width: 768px) {
+    .content {
+        width: 87.57%;
+        float: none;
+        margin: 35px 20.5px;
+    }
+    .container {
+        width: 95%;
+    }
+    .push {
+        height: 110%;
+    }
+}
+
+/** 640px **/
+
+@media screen and (max-width: 640px) {
+    .container {
+        height: fit-content;
+        width: 100%;
+    }
+    header {
+        float: none;
+        width: 100%;
+        clear: both;
+    }
+    nav {
+        margin-top: 95px;
+        float: left;
+        width: fit-content;
+        background: white;
+        padding: 10px;
+        margin-left: 165px;
+    }
+    .main-header {
+        height: fit-content;
+        background: white;
+        width: 100%;
+    }
+    .content {
+        margin-left: 15.5px;
+    }
+    /** About **/
+    #mypic {
+        float: none;
+        width: 100%;
+        height: 100%;
+    }
+    /**portfolio **/
+    .rows {
+        width: 100%;
+    }
+    .imagecontainer {
+        width: 100%;
+        height: fit-content;
+    }
+    .pict {
+        height: 99%;
+        width: 99%;
+    }
+    .text {
+        width: 98.25%;
+    }
+    /**footer**/
+    .push {
+        height: 170%;
+    }
+}
