--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,7 @@ li {
     float: left;
     height: 30px;
     border-right: 1px solid #cccccc;
+    animation: colorswitch 1s infinite;
 }
 
 li:last-child {
@@ -101,6 +102,7 @@ li a:hover {
     padding-bottom: 20px;
     height: fit-content;
     background: white;
+    animation: bounceIn 2s;
 }
 
 h1 {
@@ -113,6 +115,7 @@ h1 {
     padding-bottom: 25px;
     border-bottom: solid 2px #dddddd;
     width: 100%;
+    animation: jiggle 5ms infinite;
 }
 
 /** About us page ~~ index.html **/
@@ -174,6 +177,7 @@ form {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     padding: 10px;
+    animation: button 1s infinite;
 }
 
 .submit:hover {
@@ -258,8 +262,9 @@ footer {
 /** 980px **/
 
 @media screen and (max-width: 980px) {
-    .container {width:98%; }
-   
+    .container {
+        width: 98%;
+    }
     .content {
         width: 63%;
         float: left;
@@ -267,13 +272,10 @@ footer {
         margin-bottom: auto;
     }
     .wrapper {
-        min-height: 60%;
+        min-height: 80%;
     }
     .push {
-        height: 83%
-    }
-    footer {
-        width: 100%;
+        height: 90%
     }
 }
 
@@ -289,7 +291,7 @@ footer {
         width: 95%;
     }
     .push {
-        height: 110%;
+        height: 10%;
     }
 }
 
@@ -297,21 +299,28 @@ footer {
 
 @media screen and (max-width: 640px) {
     .container {
-        height: fit-content;
+        height: 145px;
         width: 100%;
+        position: relative;
     }
     header {
-        float: none;
+        position: static;
         width: 100%;
-        clear: both;
     }
     nav {
-        margin-top: 95px;
-        float: left;
         width: fit-content;
+        height: fit-content;
         background: white;
         padding: 10px;
-        margin-left: 165px;
+        position: absolute;
+        left: 25%;
+        top: 67%;
+    }
+    ul {
+        float: none;
+    }
+    a {
+        float: none;
     }
     .main-header {
         height: fit-content;
@@ -344,6 +353,70 @@ footer {
     }
     /**footer**/
     .push {
-        height: 170%;
+        height: 215%;
+    }
+}
+
+/** Animations **/
+
+@keyframes colorswitch {
+    from {
+        background-color: aqua;
+    }
+    to {
+        background-color: aquamarine;
+    }
+    to {
+        background-color: pink;
+    }
+    to {
+        background-color: none;
+    }
+    to {
+        background-color: green;
+    }
+    to {
+        background-color: white;
+    }
+    to {
+        background-color: none;
+    }
+}
+
+@keyframes button {
+    from {
+        background-color: red;
+    }
+    to {
+        background-color: #4aaaa5;
+    }
+}
+
+@keyframes jiggle {
+    from {
+        transform: rotate(0.4deg)
+    }
+    to {
+        transform: rotate(-0.4deg)
+    }
+    to {
+        transform: rotate(0.4deg)
+    }
+    to {
+        transform: rotate(-0.4deg)
+    }
+}
+
+@keyframes bounceIn {
+    0% {
+        transform: scale(0.1);
+        opacity: 0;
+    }
+    60% {
+        transform: scale(1.4);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1);
     }
 }
