--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,7 @@ header {
     position: absolute;
     left: 0;
     padding-left: 0;
+    animation: translatex 3s;
 }
 
 nav {
@@ -61,6 +62,8 @@ nav {
     vertical-align: middle;
     padding-top: 20px;
     height: 100%;
+    animation: rotatey 2s infinite;
+    perspective: 100px;
 }
 
 li {
@@ -128,6 +131,8 @@ h1 {
     padding-right: 5px;
     height: 250px;
     width: 220px;
+    animation: skew 1.5s ease-in-out;
+    animation-iteration-count: 2;
 }
 
 p {
@@ -227,6 +232,8 @@ form {
     padding: 10px;
     width: 285px;
     height: 230px;
+    animation: skew 2s;
+    animation-iteration-count: 2;
 }
 
 .text:hover {
@@ -359,6 +366,8 @@ footer {
 
 /** Animations **/
 
+/** 2D **/
+
 @keyframes colorswitch {
     from {
         background-color: aqua;
@@ -418,5 +427,43 @@ footer {
     }
     100% {
         transform: scale(1);
+    }
+}
+
+@keyframes translatex {
+    0% {
+        transform: translateX(70px);
+    }
+    50% {
+        transform: translateX(-40px);
+    }
+    100% {
+        transform: translateX(-30px);
+    }
+}
+
+@keyframes skew {
+    0% {
+        transform: skewX(30deg);
+    }
+    40% {
+        transform: skewy(30deg);
+    }
+    80% {
+        transform: skew(60deg, 60deg);
+    }
+    100% {
+        transform: skew(0deg, 0deg);
+    }
+}
+
+/** 3D **/
+
+@keyframes rotatey {
+    50% {
+        transform: rotateY(360deg);
+    }
+    75% {
+        transform: rotatex(360deg);
     }
 }
